# dev-job-analytics

./: .gitignore  Procfile  README.md  package.json
.github/workflows/: backend-build.yaml  backend-lint.yaml  frontend-build.yaml  frontend-lint.yaml  scraper-build.yaml  scraper-lint.yaml
jobservatory_express/: .eslintrc.yml  .gitignore  app.js  index.js  mongo.js  package-lock.json  package.json
jobservatory_express/config/: config.env  config.template.env  db.js  redis-cache.js
jobservatory_express/controllers/: questions-controller.js  technologies-controller.js
jobservatory_express/controllers/helpers/: index.ts
jobservatory_express/models/: Questions.js  StackOverflowQuestion.js  Technology.js
jobservatory_express/public/: index.html
jobservatory_express/routes/api/: members.js  questions.js  (+1 more)
jobservatory_express/tests/: app.spec.js
jobservatory_react/: package-lock.json  package.json
jobservatory_react/src/: App.tsx  fakeFinalData.js  index.tsx  reportWebVitals.ts  serviceWorker.ts  test-utils.tsx
scraper/: README.md  backfill_so_data.py  get_data.py  jobserver-config.template.yaml  pyproject.toml
scraper/scraper/: __init__.py  jobserver_record.py  populate_db.py  scraper.py  selenium_scraper.py  selenium_scrapper.py  so_questions.py  stack_overflow_client.py
scraper/tests/: __init__.py  test_populate_db.py  test_scraper.py  test_selenium_scraper.py  test_stack_overflow_client.py
scraper/tests/data/: linkedin-html-mock-au.html  linkedin-html-mock-ca.html  linkedin-html-mock-gr.html  linkedin-html-mock-hl.html  linkedin-html-mock-pl.html  linkedin-html-mock-usa.html
scrapper/: .pre-commit-config.yaml  README.md  pyproject.toml
scrapper/scrapper/: jobserver_record.py  populate_db.py  scrapper.py
scrapper/tests/: __init__.py  test_populate_db.py  test_scrapper.py
scrapper/tests/data/: linkedin-html-mock-br.html  linkedin-html-mock-ch.html  linkedin-html-mock-cl.html  linkedin-html-mock-in.html  linkedin-html-mock-uk.html  linkedin-html-mock.html
(+32 files in other folders)
