[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "Scraper to import data to the database"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
mongoengine = "^0.23.1"
selenium = { version = "^2.7", optional = true }
webdriver_manager = { version = "^1.3", optional = true }
dnspython = { version = "^2.1.0", optional = true }

[tool.poetry.extras]
selenium = ["selenium", "webdriver_manager"]
dnspython = ["dnspython"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
pre-commit = "^2.13.0"
mock = "^4.0.3"
mongomock = "^3.23.0"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
